--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - docker build -t unchaptered/docker-dev-frontend -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run -e CI=true unchaptered/docker-dev-frontend
+  - docker run -e CI=true unchaptered/docker-dev-frontend npm test
 
 after_success:
   - docker build -t unchaptered/docker-app-frontend ./frontend
