--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,27 @@
 version: "3"
 services:
   frontend:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./frontend
+    image: unchaptered/docker-app-frontend
     volumes:
       - /app/node_modules
       - ./frontend:/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true
     stdin_open: true
-    container_name: app_frontend
 
   nginx:
-    build:
-      dockerfile: Dockerfile
-      context: ./nginx
-    ports: 
-      - "3000:80"
+    image: unchaptered/docker-app-nginx
     restart: always
-    container_name: app_nginx
+    ports: 
+      - "80:80"
 
   backend:
-    build: 
-      dockerfile: Dockerfile.dev
-      context: ./backend
+    image: unchaptered/docker-app-backend
+    container_name: app_backend
     volumes:
       - /app/node_modules
       - ./backend:/app
     environment:
-      - CHOKIDAR_USEPOLLING=true
-    container_name: app_backend
-      
-  # mysql:
-  #   build: ./mysql
-  #   ports:
-  #     - "3307:3306"
-  #   restart: unless-stopped
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: reactpw
-  #     MYSQL_DATABASE: reactapp
-  #   container_name: app_mysql
+      MYSQL_HOST: $MYSQL_HOST 
+      MYSQL_USER: $MYSQL_USER 
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
+      MYSQL_PORT: $MYSQL_PORT   
