--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,21 @@ services:
   - docker
 
 before_install:
-  - echo "start Create an image with Dockerfile"
   - docker build -t unchaptered/docker-dev-frontend -f ./frontend/Dockerfile.dev ./frontend
 
 script:
   - docker run -e CI=true unchaptered/docker-dev-frontend npm test
 
 after_success:
-  - docker build -t unchaptered/docker-app-frontend ./frontend
-  - docker build -t unchaptered/docker-app-backend ./backend
-  - docker build -t unchaptered/docker-app-nginx ./nginx
+  - docker build -t unchaptered/docker-app-frontend -f ./frontend/Dockerfile ./frontend
+  - docker build -t unchaptered/docker-app-nginx -f ./nginx/Dockerfile ./nginx
+  - docker build -t unchaptered/docker-app-backend -f ./backend/Dockerfile ./backend
   
   - docker login -u "$DOCKER_HUB_ID" -p "$DOCKER_ACCESS_TOKEN" docker.io
 
   - docker push unchaptered/docker-app-frontend
-  - docker push unchaptered/docker-app-backend
   - docker push unchaptered/docker-app-nginx
+  - docker push unchaptered/docker-app-backend
 
 deploy:
   provider: elasticbeanstalk
