FIX frontend docker

--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,17 +1,13 @@
 server {
-    listen 3000
+    listen 3000;
 
     location / {
 
-        root /usr/share/nginx/html
+        root /usr/share/nginx/html;
 
-        index index.html index.htm
+        index index.html index.htm;
 
-        # 리액트를 위한 routinng
-        # Nginx 에서 home 으로 접근 시도 해도 리액트의 home/ 을 못 찾아감
-        # 따라서 이를 index.html 으로 안내하면 리액트 라우터가 home/ 으로 안내
-        try_files $uri $uri/ /index.html
+        try_files $uri  $uri/ /index.html;
 
     }
-
 }
