--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "3"
 services:
   frontend:
-    image: unchaptered/docker-app-frontend
+    image: unchaptered/docker-app-frontend:0.1.0
     volumes:
       - /app/node_modules
       - ./frontend:/app
     stdin_open: true
 
   nginx:
-    image: unchaptered/docker-app-nginx
+    image: unchaptered/docker-app-nginx:0.1.0
     restart: always
     ports: 
       - "80:80"
 
   backend:
-    image: unchaptered/docker-app-backend
+    image: unchaptered/docker-app-backend:0.1.0
     container_name: app_backend
     volumes:
       - /app/node_modules
